--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,10 @@
     "allowJs": true,
     "resolveJsonModule": true,
     "moduleDetection": "force",
+
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
+    "forceConsistentCasingInFileNames": true,
 
     /* Strictness */
     "strict": true,
@@ -38,5 +40,5 @@
     "**/*.js",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "**/node_modules/**"]
 }
